--- a/app/src/main/res/layout/activity_password_change.xml
+++ b/app/src/main/res/layout/activity_password_change.xml
@@ -4,10 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.PasswordChange">
+    tools:context=".activities.PasswordChange"
+    android:background="@color/white">
+
     <LinearLayout
-        android:layout_width="376dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="5"/>
+
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="90"
+        android:layout_gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,6 +57,38 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0">
 
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/goBack"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="0dp"
+                    android:background="@drawable/first_btn"
+                    android:drawableLeft="@drawable/baack_icon"
+                    android:drawablePadding="20dp"
+                    android:fontFamily="@font/inter_semibold"
+                    android:gravity=""
+                    android:paddingLeft="20dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingBottom="10dp"
+                    android:text="@string/back_to_authorize"
+                    android:textAllCaps="false"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:visibility="visible"/>
+
+                <View
+                    android:id="@+id/view2"
+                    android:layout_width="match_parent"
+
+                    android:layout_height="1dp"
+                    android:layout_weight="0"
+                    android:background="@color/stroke"
+                    android:foregroundGravity="center_horizontal"
+
+                    />
+
                 <LinearLayout
                     android:id="@+id/linearLayout2"
                     android:layout_width="match_parent"
@@ -54,16 +99,23 @@
                     android:background="@drawable/layout_inner_element"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/imageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:layout_weight="0"
-                        android:src="@drawable/key_icon" />
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="11">
+
+                        <ImageView
+                            android:id="@+id/imageView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0"
+                            android:src="@drawable/key_icon"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <View
                         android:layout_width="1dp"
@@ -72,9 +124,9 @@
 
                     <EditText
                         android:id="@+id/passNew"
-                        android:layout_width="260dp"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="0"
+                        android:layout_weight="78"
                         android:background="@null"
                         android:ems="10"
                         android:fontFamily="@font/inter_semibold"
@@ -86,7 +138,8 @@
 
                     <ImageButton
                         android:id="@+id/eyeBtn"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
+                        android:layout_weight="11"
                         android:layout_height="match_parent"
                         android:layout_gravity="right"
                         android:src="@drawable/eye_icon"
@@ -118,16 +171,23 @@
                     android:background="@drawable/layout_inner_element"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/imageView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:layout_weight="0"
-                        android:src="@drawable/key_icon" />
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="11">
+
+                        <ImageView
+                            android:id="@+id/imageView3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0"
+                            android:src="@drawable/key_icon"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <View
                         android:layout_width="1dp"
@@ -136,9 +196,9 @@
 
                     <EditText
                         android:id="@+id/passRepeat"
-                        android:layout_width="260dp"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="0"
+                        android:layout_weight="78"
                         android:background="@null"
                         android:ems="10"
                         android:fontFamily="@font/inter_semibold"
@@ -151,8 +211,9 @@
 
                     <ImageButton
                         android:id="@+id/eyeBtn2"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_weight="11"
                         android:layout_gravity="right"
                         android:src="@drawable/eye_icon"
                         android:background="@drawable/hide_password"/>
@@ -190,9 +251,9 @@
 
                 <ImageButton
                     android:id="@+id/settingsBtn"
-                    android:layout_width="40dp"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0"
+                    android:layout_weight="11"
                     android:layout_marginRight="-1dp"
                     android:background="@drawable/stg_btn_rect"
                     android:paddingTop="15dp"
@@ -202,11 +263,10 @@
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/changePass"
-                    android:layout_width="263.5dp"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0"
-                    android:layout_marginRight="-1dp"
-                    android:background="@drawable/btn"
+                    android:layout_weight="89"
+                    android:background="@drawable/exit_btn"
                     android:fontFamily="@font/inter_semibold"
                     android:text="@string/password_change"
                     android:textAllCaps="false"
@@ -214,21 +274,16 @@
                     android:textSize="15sp" />
 
 
-                <ImageButton
-                    android:id="@+id/backButton"
-                    android:layout_width="40dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0"
-
-                    android:background="@drawable/exit_btn"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="15dp"
-                    android:src="@drawable/exit_icon"
-                    />
-
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="5"/>
 
     </LinearLayout>
 
