--- a/app/src/main/res/layout/activity_password_recovery.xml
+++ b/app/src/main/res/layout/activity_password_recovery.xml
@@ -4,16 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/white">
 
     <LinearLayout
-        android:layout_width="376dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="5"/>
+
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="90"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_gravity="center">
 
         <TextView
             android:id="@+id/textView2"
@@ -51,7 +59,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="0dp"
                     android:layout_marginBottom="0dp"
-                    android:background="@drawable/other_btn"
+                    android:background="@drawable/first_btn"
                     android:drawableLeft="@drawable/baack_icon"
                     android:drawablePadding="20dp"
                     android:fontFamily="@font/inter_semibold"
@@ -77,16 +85,23 @@
                     android:background="@drawable/layout_inner_element"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/imageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:layout_weight="0"
-                        android:src="@drawable/user_icon" />
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="11">
+
+                        <ImageView
+                            android:id="@+id/imageView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0"
+                            android:src="@drawable/user_icon"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <View
                         android:layout_width="1dp"
@@ -95,9 +110,9 @@
 
                     <EditText
                         android:id="@+id/editTextPersonName"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="0"
+                        android:layout_weight="89"
                         android:background="@null"
                         android:ems="10"
                         android:fontFamily="@font/inter_semibold"
@@ -142,10 +157,10 @@
 
                 <ImageButton
                     android:id="@+id/settingsBtn"
-                    android:layout_width="40dp"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0"
-                    android:layout_marginRight="-1dp"
+                    android:layout_weight="11"
+                    android:layout_marginRight="-2dp"
                     android:background="@drawable/stg_btn_rect"
                     android:paddingTop="15dp"
                     android:paddingBottom="15dp"
@@ -154,32 +169,25 @@
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/continueButton"
-                    android:layout_width="263.5dp"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0"
-                    android:layout_marginRight="-1dp"
-                    android:background="@drawable/btn"
+                    android:layout_weight="89"
+                    android:background="@drawable/exit_btn"
                     android:fontFamily="@font/inter_semibold"
                     android:text="@string/continuee"
                     android:textAllCaps="false"
                     android:textColor="@color/black"
                     android:textSize="15sp" />
 
-                <ImageButton
-                    android:id="@+id/backButton"
-                    android:layout_width="40dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0"
-
-                    android:background="@drawable/exit_btn"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="15dp"
-                    android:src="@drawable/exit_icon"
-                    />
 
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+    </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="5"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
