--- a/app/src/main/res/layout/activity_register_window.xml
+++ b/app/src/main/res/layout/activity_register_window.xml
@@ -4,43 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/white">
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:text="empty"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:text="empty"
-        android:textSize="18sp"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="DuplicateIds" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="5"/>
 
     <LinearLayout
         android:id="@+id/linearLayout6"
-        android:layout_width="376dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="90"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_gravity="center">
 
         <TextView
             android:id="@+id/textView2"
@@ -72,6 +58,35 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0">
 
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/goBack"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="0dp"
+                    android:background="@drawable/first_btn"
+                    android:drawableLeft="@drawable/baack_icon"
+                    android:drawablePadding="20dp"
+                    android:fontFamily="@font/inter_semibold"
+                    android:paddingLeft="20dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingBottom="10dp"
+                    android:text="@string/back_to_authorize"
+                    android:textAllCaps="false"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:visibility="visible"/>
+
+                <View
+                    android:id="@+id/view2"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_weight="0"
+                    android:background="@color/stroke"
+                    android:foregroundGravity="center_horizontal"
+                    />
+
                 <LinearLayout
                     android:id="@+id/linearLayout2"
                     android:layout_width="match_parent"
@@ -82,16 +97,23 @@
                     android:background="@drawable/layout_inner_element"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/imageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:layout_weight="0"
-                        android:src="@drawable/user_icon" />
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="11">
+
+                        <ImageView
+                            android:id="@+id/imageView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0"
+                            android:src="@drawable/user_icon"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <View
                         android:layout_width="1dp"
@@ -100,9 +122,9 @@
 
                     <EditText
                         android:id="@+id/person_name"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="0"
+                        android:layout_weight="89"
                         android:background="@null"
                         android:ems="10"
                         android:fontFamily="@font/inter_semibold"
@@ -123,7 +145,6 @@
                     android:layout_weight="0"
                     android:background="@color/stroke"
                     android:foregroundGravity="center_horizontal"
-
                     />
 
                 <LinearLayout
@@ -138,16 +159,23 @@
                     android:background="@drawable/layout_inner_element"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/imageView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:layout_weight="0"
-                        android:src="@drawable/key_icon" />
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="11">
+
+                        <ImageView
+                            android:id="@+id/imageView3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0"
+                            android:src="@drawable/key_icon"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <View
                         android:layout_width="1dp"
@@ -156,9 +184,9 @@
 
                     <EditText
                         android:id="@+id/passInput"
-                        android:layout_width="260dp"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="0"
+                        android:layout_weight="78"
                         android:background="@null"
                         android:ems="10"
                         android:fontFamily="@font/inter_semibold"
@@ -172,8 +200,9 @@
 
                     <ImageButton
                         android:id="@+id/eyeBtn"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_weight="11"
                         android:layout_gravity="right"
                         android:background="@drawable/hide_password"
                         android:src="@drawable/eye_icon" />
@@ -204,16 +233,23 @@
                     android:background="@drawable/layout_inner_element"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/imageView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:layout_weight="0"
-                        android:src="@drawable/key_icon" />
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="11">
+
+                        <ImageView
+                            android:id="@+id/imageView3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0"
+                            android:src="@drawable/key_icon"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <View
                         android:layout_width="1dp"
@@ -222,9 +258,9 @@
 
                     <EditText
                         android:id="@+id/passRepeat"
-                        android:layout_width="260dp"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="0"
+                        android:layout_weight="78"
                         android:background="@null"
                         android:ems="10"
                         android:fontFamily="@font/inter_semibold"
@@ -237,8 +273,9 @@
 
                     <ImageButton
                         android:id="@+id/eyeBtn2"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_weight="11"
                         android:layout_gravity="right"
                         android:background="@drawable/hide_password"
                         android:src="@drawable/eye_icon" />
@@ -269,16 +306,23 @@
                     android:background="@drawable/layout_inner_element"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/imageView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:layout_weight="0"
-                        android:src="@drawable/question_icon" />
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="11">
+
+                        <ImageView
+                            android:id="@+id/imageView3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0"
+                            android:src="@drawable/question_icon"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:paddingLeft="3dp"
+                            tools:layout_editor_absoluteX="3dp" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <View
                         android:layout_width="1dp"
@@ -287,9 +331,9 @@
 
                     <EditText
                         android:id="@+id/question"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="0"
+                        android:layout_weight="89"
                         android:background="@null"
                         android:ems="10"
                         android:fontFamily="@font/inter_semibold"
@@ -326,16 +370,23 @@
                     android:background="@drawable/layout_inner_element"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/imageView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:layout_weight="0"
-                        android:src="@drawable/answer_icon" />
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="11">
+
+                        <ImageView
+                            android:id="@+id/imageView3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_marginBottom="5dp"
+                            android:layout_weight="0"
+                            android:src="@drawable/answer_icon" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <View
                         android:layout_width="1dp"
@@ -344,9 +395,9 @@
 
                     <EditText
                         android:id="@+id/answer"
-                        android:layout_width="260dp"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="0"
+                        android:layout_weight="78"
                         android:background="@null"
                         android:ems="10"
                         android:fontFamily="@font/inter_semibold"
@@ -359,8 +410,9 @@
 
                     <ImageButton
                         android:id="@+id/eyeBtn3"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_weight="11"
                         android:layout_gravity="right"
                         android:background="@drawable/hide_password"
                         android:src="@drawable/eye_icon" />
@@ -398,10 +450,10 @@
 
                 <ImageButton
                     android:id="@+id/settingsBtn"
-                    android:layout_width="40dp"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginRight="-1dp"
-                    android:layout_weight="0"
+                    android:layout_weight="11"
                     android:background="@drawable/stg_btn_rect"
                     android:onClick="showSettingsMenu"
                     android:paddingTop="15dp"
@@ -410,31 +462,28 @@
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/register_btn"
-                    android:layout_width="263.5dp"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_marginRight="-1dp"
-                    android:layout_weight="0"
-                    android:background="@drawable/btn"
+                    android:layout_weight="89"
+                    android:background="@drawable/exit_btn"
                     android:fontFamily="@font/inter_semibold"
                     android:text="@string/register"
                     android:textAllCaps="false"
                     android:textColor="@color/black"
                     android:textSize="15sp" />
 
-                <ImageButton
-                    android:id="@+id/backButton"
-                    android:layout_width="40dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0"
 
-                    android:background="@drawable/exit_btn"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="15dp"
-                    android:src="@drawable/exit_icon" />
 
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="5"/>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
